--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <form id="Login" class="input-grp">
                 <input type="text" class="input-field" placeholder="User ID" required>
-                <input type="text" class="input-field" placeholder="Enter Password" required>
+                <input type="password" class="input-field" placeholder="Enter Password" required>
                 <input type="checkbox" class="checkbox-field"><span>Remember Password</span>
                 <button type="submit" class="submit-btn">Login</button>
             </form>
